Revised policy (minor)

--- a/Jumper/Privacy/PrivacyPolicy/PrivacyPolicy.html
+++ b/Jumper/Privacy/PrivacyPolicy/PrivacyPolicy.html
@@ -297,8 +297,8 @@
 
       <!--Privacy Policy Ammendments-->
       <div class="privacy-policy-ammendments">
-        <h2>6. PRIVACY POLICY AMMENDMENTS</h2>
-        We reserve the right to ammend, update, or revise this privacy policy at any time, and we will update you when and if that happens.
+        <h2>6. PRIVACY POLICY AMENDMENTS</h2>
+        We reserve the right to amend, update, or revise this privacy policy at any time, and we will update you when and if that happens. You may view a history of revisements at https://jamiecorkhill.github.io/Jumper/Privacy/PrivacyPolicyRevisions/PrivacyPolicyRevisions
       </div>
 
       <!--Copyright Information-->
