Added Terms and Conditions, changed CSS file structure.

--- a/Jumper/Privacy/PrivacyPolicy/PrivacyPolicy.html
+++ b/Jumper/Privacy/PrivacyPolicy/PrivacyPolicy.html
@@ -6,7 +6,7 @@
     <title>Privacy Policy</title>
 
     <!--Stylesheets-->
-    <link rel="stylesheet" type="text/css" href="../SharedStyles/style.css"/>
+    <link rel="stylesheet" type="text/css" href="../../SharedStyles/style.css"/>
 
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
