--- a/Jumper/Privacy/PrivacyPolicy/Policy.html
+++ b/Jumper/Privacy/PrivacyPolicy/Policy.html
@@ -29,6 +29,8 @@
         <br /><br />
         By using Jumper or our Products and Services, you acknowledge that we and our partners will use your data in the United States, Asia, Europe, Australia, or any other country were Jumper or our third-party partners operate. That is, our partners may process your data anywhere Google LLC or its agents maintain facilities, such as Google Cloud Platform locations or Google Data Center locations).
         <br /><br />
+        Herein, please disregard any reference to Crashlytics, Fabric Crashlytics, and Crash Reporting. At present, we do not collect any crash reporting data, and as such, we won't ask for consent to do so - since we won't be collecting data.
+        <br /><br />
         This privacy policy complies with the EU’s General Data Protection Regulation and describes how we and our partners protect user data taken outside of the European Union or the European Economic Area. Please be aware that the privacy laws and standards in certain countries, including the rights of authorities to access your personal information, may differ from those that apply in the country in which you reside.
       </div>
 
